--- a/4_build-model-SVM.ipynb
+++ b/4_build-model-SVM.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,39 +71,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n"
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 1 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 2 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 3 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 4 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 5 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 6 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 7 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 8 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 9 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 10 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 11 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 12 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 13 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 14 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 15 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 16 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 17 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 18 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 19 )\n",
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 20 )\n"
      ]
     }
    ],
    "source": [
-    "i = 0 \n",
-    "while i < 20:\n",
     "    # instantiate classifier with rbf kernel and C=100\n",
     "    svc=SVC(C=1000.0) \n",
     "    # fit classifier to training set\n",
@@ -111,8 +109,7 @@
     "    # make predictions on test set\n",
     "    y_pred=svc.predict(X_test)\n",
     "    # compute and print accuracy score\n",
-    "    print('Model accuracy score with rbf kernel and C=1000.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred)))   \n",
-    "    i = i + 1"
+    "    print('Model accuracy score with rbf kernel and C=1000.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred)), '( Iteration number', i,')')   "
    ]
   },
   {
@@ -124,48 +121,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021\n"
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 1 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 2 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 3 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 4 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 5 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 6 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 7 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 8 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 9 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 10 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 11 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 12 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 13 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 14 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 15 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 16 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 17 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 18 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 19 )\n",
+      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 20 )\n"
      ]
     }
    ],
    "source": [
-    "i = 0 \n",
-    "while i < 20:\n",
-    "    # instantiate classifier with linear kernel and C=1.0\n",
+    "   # instantiate classifier with linear kernel and C=1.0\n",
     "    linear_svc=SVC(kernel='linear', C=1.0) \n",
     "    # fit classifier to training set\n",
     "    linear_svc.fit(X_train,y_train)\n",
     "    # make predictions on test set\n",
     "    y_pred_test=linear_svc.predict(X_test)\n",
-    "    # compute and print accuracy score\n",
-    "    print('Model accuracy score with linear kernel and C=1.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred_test)))\n",
-    "    i = i + 1"
+    "    # compute and print accuracy score"
    ]
   },
   {
@@ -177,53 +170,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021\n"
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 0 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 1 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 2 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 3 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 4 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 5 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 6 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 7 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 8 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 9 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 10 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 11 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 12 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 13 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 14 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 15 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 16 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 17 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 18 )\n",
+      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 19 )\n"
      ]
     }
    ],
    "source": [
-    "i = 0\n",
-    "while i < 20:\n",
     "    poly_svc=SVC(kernel='poly', C=1.0) \n",
     "    # fit classifier to training set\n",
     "    poly_svc.fit(X_train,y_train)\n",
     "    # make predictions on test set\n",
     "    y_pred=poly_svc.predict(X_test)\n",
-    "    # compute and print accuracy score\n",
-    "    print('Model accuracy score with polynomial kernel and C=1.0 at iteration : {0:0.4f}'. format(accuracy_score(y_test, y_pred)))\n",
-    "    i = i+1"
+    "    # compute and print accuracy score"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "34c6b41d8fd4016702a6819aa34bfee64e1ed137f5751191d53310aeee52770b"
+   "hash": "15f7ea1ae933a3bca0210cb7572c0952f08b91c912628f3b83103bd71cce445f"
   },
   "kernelspec": {
    "display_name": "Python 3.9.7 ('base')",
