Switch the kernel into SVM

--- a/4_build-model-SVM.ipynb
+++ b/4_build-model-SVM.ipynb
@@ -78,26 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 1 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 2 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 3 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 4 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 5 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 6 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 7 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 8 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 9 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 10 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 11 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 12 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 13 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 14 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 15 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 16 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 17 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 18 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 19 )\n",
-      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809 ( Iteration number 20 )\n"
+      "Model accuracy score with rbf kernel and C=1000.0 : 0.6809\n"
      ]
     }
    ],
@@ -109,7 +90,7 @@
     "    # make predictions on test set\n",
     "    y_pred=svc.predict(X_test)\n",
     "    # compute and print accuracy score\n",
-    "    print('Model accuracy score with rbf kernel and C=1000.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred)), '( Iteration number', i,')')   "
+    "    print('Model accuracy score with rbf kernel and C=1000.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred)))   "
    ]
   },
   {
@@ -128,37 +109,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 1 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 2 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 3 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 4 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 5 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 6 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 7 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 8 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 9 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 10 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 11 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 12 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 13 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 14 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 15 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 16 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 17 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 18 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 19 )\n",
-      "Model accuracy score with linear kernel and C=1.0 : 0.7021 ( Iteration number 20 )\n"
+      "Model accuracy score with linear kernel and C=1.0 : 0.6809\n"
      ]
     }
    ],
    "source": [
     "   # instantiate classifier with linear kernel and C=1.0\n",
-    "    linear_svc=SVC(kernel='linear', C=1.0) \n",
-    "    # fit classifier to training set\n",
-    "    linear_svc.fit(X_train,y_train)\n",
-    "    # make predictions on test set\n",
-    "    y_pred_test=linear_svc.predict(X_test)\n",
-    "    # compute and print accuracy score"
+    "   linear_svc=SVC(kernel='linear', C=1.0) \n",
+    "   # fit classifier to training set\n",
+    "   linear_svc.fit(X_train,y_train)\n",
+    "   # make predictions on test set\n",
+    "   y_pred_test=linear_svc.predict(X_test)\n",
+    "   # compute and print accuracy score\n",
+    "   print('Model accuracy score with linear kernel and C=1.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred))) "
    ]
   },
   {
@@ -177,26 +140,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 0 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 1 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 2 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 3 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 4 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 5 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 6 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 7 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 8 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 9 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 10 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 11 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 12 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 13 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 14 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 15 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 16 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 17 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 18 )\n",
-      "Model accuracy score with polynomial kernel and C=1.0 at iteration : 0.7021 ( Iteration number 19 )\n"
+      "Model accuracy score with poly kernel and C=1.0 : 0.7021\n"
      ]
     }
    ],
@@ -206,15 +150,9 @@
     "    poly_svc.fit(X_train,y_train)\n",
     "    # make predictions on test set\n",
     "    y_pred=poly_svc.predict(X_test)\n",
-    "    # compute and print accuracy score"
+    "    # compute and print accuracy score\n",
+    "    print('Model accuracy score with poly kernel and C=1.0 : {0:0.4f}'. format(accuracy_score(y_test, y_pred))) "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
