comparison by using Variance Threshold and Select KBest, and pick one of the selector

--- a/1_data-preparation.ipynb
+++ b/1_data-preparation.ipynb
@@ -16,7 +16,10 @@
     "#importing the library that will be used\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import joblib\n",
+    "from sklearn.feature_selection import VarianceThreshold\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif"
    ]
   },
   {
@@ -61,7 +64,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anasb\\AppData\\Local\\Temp\\ipykernel_20640\\2445075083.py:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\anasb\\AppData\\Local\\Temp\\ipykernel_1876\\2445075083.py:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  dataset[\"Type\"] = dataset[\"Type\"].str.replace(r'[0-9]', '')\n"
      ]
     }
@@ -316,7 +319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\anasb\\AppData\\Local\\Temp\\ipykernel_20640\\439375982.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
+      "C:\\Users\\anasb\\AppData\\Local\\Temp\\ipykernel_1876\\439375982.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only.\n",
       "  X = dataset.drop(\"Type\",1)\n"
      ]
     }
@@ -815,31 +818,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Split into feature and target variable then Variance Tresholding for feature selection "
+    "### Split into feature and target variable then use Variance Treshold & Select KBest for feature selection "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Variance Threshold"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.feature_selection import VarianceThreshold\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((93, 22214), (94, 22214), (93,), (93,))"
+       "22214"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +847,18 @@
    "source": [
     "# Split dataset into X_train, X_test, y_train, y_test with train test split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=42)\n",
-    "X_train.shape, X_test.shape, y_train.shape, y_train.shape"
+    "feat_name = X_train.columns.values.tolist()\n",
+    "len(feat_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "selector = VarianceThreshold(threshold=0.008)\n",
+    "X_train_sel_1 = selector.fit_transform(X_train)"
    ]
   },
   {
@@ -858,7 +869,7 @@
     {
      "data": {
       "text/plain": [
-       "22214"
+       "9073"
       ]
      },
      "execution_count": 14,
@@ -867,8 +878,21 @@
     }
    ],
    "source": [
-    "feat_name = X_train.columns.values.tolist()\n",
-    "len(feat_name)"
+    "supp = selector.get_support()\n",
+    "sel_feat = []\n",
+    "\n",
+    "for i in range(len(supp)):\n",
+    "    if supp[i] == True:\n",
+    "        sel_feat.append(feat_name[i])\n",
+    "\n",
+    "len(sel_feat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Select KBest"
    ]
   },
   {
@@ -879,19 +903,99 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.85438271, 1.86816324, 1.97079918, ..., 2.19175908, 1.64769626,\n",
-       "        2.3253015 ],\n",
-       "       [2.09479648, 2.15467685, 2.29358531, ..., 2.19130744, 1.84174412,\n",
-       "        2.37625426],\n",
-       "       [1.88087826, 1.88081089, 2.10385848, ..., 2.22699613, 1.67572968,\n",
-       "        2.32638231],\n",
-       "       ...,\n",
-       "       [1.89147091, 1.90627453, 2.13095689, ..., 2.13852256, 1.68988417,\n",
-       "        2.38574439],\n",
-       "       [1.87098921, 1.81963263, 2.03789243, ..., 2.2270254 , 1.77697229,\n",
-       "        2.36336342],\n",
-       "       [1.82670467, 1.91197492, 2.09464652, ..., 2.24514666, 1.52952513,\n",
-       "        2.30869958]])"
+       "array([[1.66301573, 1.881098  , 2.30118463, 2.51578485, 2.19708503],\n",
+       "       [2.07165045, 1.84848494, 2.33619311, 2.52340915, 2.32076424],\n",
+       "       [1.6569059 , 1.5920556 , 2.38405893, 2.60959234, 2.28921625],\n",
+       "       [1.86219348, 1.64960212, 2.71777687, 2.64012923, 2.24550175],\n",
+       "       [1.83356777, 1.60264928, 2.77203069, 2.81549489, 2.25895996],\n",
+       "       [1.79650307, 1.58213879, 2.84765623, 2.67618886, 2.37643848],\n",
+       "       [1.75850061, 1.60435414, 2.68135773, 2.70310292, 2.39772029],\n",
+       "       [1.77716045, 1.78790298, 2.56842642, 2.5969051 , 2.19368881],\n",
+       "       [1.75321044, 1.54621983, 2.64591604, 2.54855549, 2.23940904],\n",
+       "       [1.94906273, 1.62279779, 2.90413164, 2.72879604, 2.40054285],\n",
+       "       [1.6996076 , 1.87473402, 2.48634728, 2.45912573, 2.20920941],\n",
+       "       [1.59934636, 1.8720021 , 2.30676153, 2.51679102, 2.17466559],\n",
+       "       [1.63295217, 1.83864122, 2.30272087, 2.43460181, 2.16774874],\n",
+       "       [1.92339947, 1.74698257, 2.47354406, 2.62119597, 2.36244913],\n",
+       "       [1.75942858, 1.68163277, 2.57350783, 2.51609964, 2.24564504],\n",
+       "       [1.67179562, 1.66982139, 2.34170999, 2.49937726, 2.20415981],\n",
+       "       [1.73975394, 1.84014334, 2.51587566, 2.46660024, 2.18753182],\n",
+       "       [1.8360651 , 1.69832251, 2.76157931, 2.65161178, 2.3420694 ],\n",
+       "       [1.71384711, 1.71524983, 2.52188821, 2.56234135, 2.21144556],\n",
+       "       [1.77920424, 1.54725683, 2.59579007, 2.67419916, 2.38024348],\n",
+       "       [1.6397994 , 1.87791854, 2.43287231, 2.54398775, 2.17399311],\n",
+       "       [1.75811083, 1.58440311, 2.69106488, 2.54051288, 2.20782509],\n",
+       "       [1.72401369, 1.77428273, 2.65290978, 2.481821  , 2.18197077],\n",
+       "       [1.91923557, 1.93643705, 2.55149362, 2.69627164, 2.20645662],\n",
+       "       [1.73559886, 1.76425527, 2.43160905, 2.47654682, 2.21102746],\n",
+       "       [1.77251321, 1.61073313, 2.69519499, 2.52968479, 2.26291658],\n",
+       "       [1.76335506, 1.54278946, 2.44053899, 2.68100188, 2.28657099],\n",
+       "       [1.78621745, 1.68803485, 2.43560619, 2.61888162, 2.18281241],\n",
+       "       [1.78776802, 1.60875059, 2.5477378 , 2.59268068, 2.14013339],\n",
+       "       [1.5879242 , 1.85467872, 2.37256268, 2.47115858, 2.25479719],\n",
+       "       [1.77406466, 1.8032506 , 2.51006489, 2.66202726, 2.21921407],\n",
+       "       [1.79321171, 1.65161109, 2.56356061, 2.57775993, 2.33993407],\n",
+       "       [1.71547302, 1.88084458, 2.61506665, 2.61059849, 2.40963315],\n",
+       "       [1.63722396, 1.82035095, 2.37370945, 2.48344434, 2.19571673],\n",
+       "       [1.92421735, 1.5924092 , 2.86962251, 2.7266039 , 2.4176322 ],\n",
+       "       [1.89226317, 1.53753463, 2.47815512, 2.6415236 , 2.23095491],\n",
+       "       [1.78408137, 1.67053989, 2.47165883, 2.4795392 , 2.26426738],\n",
+       "       [2.0835286 , 1.53703658, 2.80853374, 2.67246155, 2.43069206],\n",
+       "       [1.64975248, 1.77999675, 2.31040644, 2.50567705, 2.21628226],\n",
+       "       [1.94483896, 1.64511552, 3.00341082, 2.78694905, 2.32941469],\n",
+       "       [1.61046574, 1.6868474 , 2.60053334, 2.53789365, 2.38191874],\n",
+       "       [1.65807892, 1.80483708, 2.47395182, 2.56883035, 2.1966061 ],\n",
+       "       [1.58651353, 1.85916491, 2.28311103, 2.57900946, 2.12481976],\n",
+       "       [1.76729546, 1.78455968, 2.61284857, 2.46045898, 2.24642815],\n",
+       "       [1.85152519, 1.5095864 , 2.73193307, 2.68317789, 2.45870615],\n",
+       "       [1.98967674, 1.57065431, 2.85939752, 2.67380492, 2.41380717],\n",
+       "       [1.6994046 , 1.85676026, 2.32511149, 2.48448387, 2.14388185],\n",
+       "       [1.62951609, 1.9093699 , 2.34094959, 2.46536383, 2.06948599],\n",
+       "       [1.67616268, 1.85160714, 2.72598824, 2.5983421 , 2.11594014],\n",
+       "       [1.64432701, 1.95040682, 2.39640202, 2.52113267, 2.17031928],\n",
+       "       [1.70830203, 1.65781513, 2.64764193, 2.5957748 , 2.2106295 ],\n",
+       "       [1.82353049, 1.67136539, 2.62130007, 2.63737631, 2.28503491],\n",
+       "       [1.77212087, 1.94961785, 2.5136004 , 2.47288439, 2.21590593],\n",
+       "       [1.78177095, 1.85672401, 2.57437452, 2.60989275, 2.17559741],\n",
+       "       [1.75993302, 1.60154725, 2.54959081, 2.5929588 , 2.40931517],\n",
+       "       [1.79203988, 1.57488963, 2.72512622, 2.66246074, 2.26900501],\n",
+       "       [1.9889195 , 1.52485554, 2.52566951, 2.7090837 , 2.40786882],\n",
+       "       [1.90845094, 1.75293309, 2.78186011, 2.51528504, 2.18910026],\n",
+       "       [1.78263082, 1.68042518, 2.44647672, 2.53595365, 2.23913313],\n",
+       "       [1.90193809, 1.51929229, 2.63031833, 2.82572417, 2.33872761],\n",
+       "       [1.6348121 , 1.72523203, 2.35039031, 2.56919163, 2.36213909],\n",
+       "       [2.00487815, 1.83563268, 2.82627472, 2.53359674, 2.32229882],\n",
+       "       [1.72305129, 1.69743801, 2.53885622, 2.47656315, 2.32903832],\n",
+       "       [1.66434038, 1.7792862 , 2.39273039, 2.55422586, 2.16771824],\n",
+       "       [1.89205445, 1.60823158, 2.64566085, 2.69220667, 2.38798008],\n",
+       "       [1.61235533, 1.89080659, 2.47982009, 2.53780098, 2.28181277],\n",
+       "       [1.80553515, 1.71425695, 2.50098658, 2.58331809, 2.28438354],\n",
+       "       [1.81184378, 1.56233231, 2.6520461 , 2.81944093, 2.40571822],\n",
+       "       [1.84361288, 1.6615973 , 2.80707996, 2.68180995, 2.32045868],\n",
+       "       [1.7992154 , 1.64654748, 2.67805973, 2.55648092, 2.30435917],\n",
+       "       [1.89138847, 1.67961431, 2.73572449, 2.70586115, 2.22588909],\n",
+       "       [1.9864062 , 1.55839598, 2.93040032, 2.81718936, 2.38156662],\n",
+       "       [1.83873842, 1.64280506, 2.56135669, 2.64980788, 2.33149857],\n",
+       "       [1.83322245, 1.60977812, 2.60959565, 2.69002838, 2.29380482],\n",
+       "       [1.70647176, 1.80754411, 2.6627009 , 2.51717993, 2.2197605 ],\n",
+       "       [1.79363374, 1.82230961, 2.56503144, 2.60220458, 2.35594909],\n",
+       "       [1.76569089, 1.6613825 , 2.70082187, 2.5290688 , 2.38807213],\n",
+       "       [2.14293062, 1.59096507, 2.81020349, 2.6888994 , 2.38513197],\n",
+       "       [1.8936216 , 1.62058078, 2.5124752 , 2.61786854, 2.3226285 ],\n",
+       "       [1.73142961, 1.941142  , 2.57517798, 2.50889359, 2.08623382],\n",
+       "       [1.70730833, 1.92953841, 2.39402511, 2.46981019, 2.18680257],\n",
+       "       [1.58612388, 1.8634247 , 2.37327931, 2.49817579, 2.24252904],\n",
+       "       [1.67050001, 1.73963082, 2.39333245, 2.50468242, 2.24312827],\n",
+       "       [1.63043063, 1.74864585, 2.4613672 , 2.59024439, 2.22319145],\n",
+       "       [1.75868736, 1.6175712 , 2.70820291, 2.59581346, 2.20529679],\n",
+       "       [1.7010575 , 1.73344372, 2.36909903, 2.48026719, 2.202187  ],\n",
+       "       [1.72286905, 1.85248472, 2.48962514, 2.5388798 , 2.15944803],\n",
+       "       [1.82444242, 2.20676699, 2.45287504, 2.47553656, 2.32369086],\n",
+       "       [1.66100663, 1.85797264, 2.34806071, 2.63256859, 2.02066683],\n",
+       "       [1.67692947, 1.83624612, 2.80572788, 2.58437304, 2.30933687],\n",
+       "       [1.75457029, 1.85829179, 2.60396051, 2.59957917, 2.07963616],\n",
+       "       [1.81749024, 1.72934307, 2.52168875, 2.60139725, 2.38021743],\n",
+       "       [1.71274543, 1.92620594, 2.3713559 , 2.50453599, 2.15111878]])"
       ]
      },
      "execution_count": 15,
@@ -900,8 +1004,8 @@
     }
    ],
    "source": [
-    "selector = VarianceThreshold(threshold=0.008)\n",
-    "selector.fit_transform(X_train)"
+    "selector_2 = SelectKBest(f_classif, k=5)\n",
+    "selector_2.fit_transform(X_train_sel_1, y_train.values.ravel())"
    ]
   },
   {
@@ -910,19 +1014,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "supp = selector.get_support()"
+    "support_2 = selector_2.get_support()\n",
+    "sel_feat_2 = []\n",
+    "for i in range(len(support_2)):\n",
+    "    if support_2[i] == True:\n",
+    "        sel_feat_2.append(sel_feat[i])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['202558_s_at', '217497_at', '218976_at', '203988_s_at', '216693_x_at']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sel_feat = []\n",
-    "for i in range(len(supp)):\n",
-    "    if supp[i] == True:\n",
-    "        sel_feat.append(feat_name[i])"
+    "sel_feat_2 "
    ]
   },
   {
@@ -933,7 +1049,7 @@
     {
      "data": {
       "text/plain": [
-       "9073"
+       "['sel_feat.pkl']"
       ]
      },
      "execution_count": 18,
@@ -942,12 +1058,32 @@
     }
    ],
    "source": [
-    "len(sel_feat)"
+    "joblib.dump(sel_feat_2, \"sel_feat.pkl\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['selector.pkl']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump([selector, selector_2], \"selector.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
