final for inputted in the journal

--- a/6_model-validation.ipynb
+++ b/6_model-validation.ipynb
@@ -58,17 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2dff28d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "scaler = StandardScaler()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "id": "5fde43b0",
    "metadata": {},
    "outputs": [],
@@ -80,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "0644ddb1",
    "metadata": {},
    "outputs": [
@@ -90,7 +79,7 @@
        "((93, 1028), (94, 1028))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e8404d45",
    "metadata": {},
    "outputs": [],
@@ -118,17 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b209be14",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((93, 493), (93, 485), (93, 512))"
+       "((93, 485), (93, 494), (93, 492))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,17 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "29597f82",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((94, 493), (94, 485), (94, 512))"
+       "((94, 485), (94, 494), (94, 492))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "61916ae9",
    "metadata": {},
    "outputs": [
@@ -178,7 +169,7 @@
      "output_type": "stream",
      "text": [
       "Linear model train score: 0.8924731182795699\n",
-      "Linear model test score: 0.7127659574468085\n"
+      "Linear model test score: 0.648936170212766\n"
      ]
     }
    ],
@@ -192,16 +183,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "ac18a806",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        LNR1       0.62      0.64      0.63        44\n",
+      "        LNR2       0.67      0.66      0.67        50\n",
+      "\n",
+      "    accuracy                           0.65        94\n",
+      "   macro avg       0.65      0.65      0.65        94\n",
+      "weighted avg       0.65      0.65      0.65        94\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Report for Linear kernel (Train set) \n",
+    "from sklearn.metrics import classification_report\n",
+    "target_names = ['LNR1', 'LNR2']\n",
+    "print(classification_report(y_test, y_pred_test_linear, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
-   "id": "422c5892",
+   "id": "78a587e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[33, 17],\n",
+       "       [16, 28]], dtype=int64)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred_test_linear, labels=[1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a6978401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP_linear = 37 \n",
+    "FN_linear = 13\n",
+    "FP_linear = 15\n",
+    "TN_linear = 29"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "534e638f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RBF model train score: 0.8602150537634409\n",
-      "RBF model test score: 0.723404255319149\n"
+      "Linear model train score: 0.8924731182795699\n",
+      "Linear model test score: 0.7127659574468085\n"
      ]
     }
    ],
@@ -209,22 +268,92 @@
     "y_pred_train_rbf = model_looks_rbf_HT.predict(X_train_rbf)\n",
     "y_pred_test_rbf = model_looks_rbf_HT.predict(X_test_rbf)\n",
     "### score\n",
-    "print(f'RBF model train score: {accuracy_score(y_train, y_pred_train_rbf)}')\n",
-    "print(f'RBF model test score: {accuracy_score(y_test, y_pred_test_rbf)}')"
+    "print(f'Linear model train score: {accuracy_score(y_train, y_pred_train_rbf)}')\n",
+    "print(f'Linear model test score: {accuracy_score(y_test, y_pred_test_rbf)}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "7f5f9609",
-   "metadata": {},
+   "execution_count": 15,
+   "id": "537a9468",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Poly model train score: 0.967741935483871\n",
-      "Poly model test score: 0.7127659574468085\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        RBF1       0.72      0.64      0.67        44\n",
+      "        RBF2       0.71      0.78      0.74        50\n",
+      "\n",
+      "    accuracy                           0.71        94\n",
+      "   macro avg       0.71      0.71      0.71        94\n",
+      "weighted avg       0.71      0.71      0.71        94\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confution Matrix for Linear kernel (Test)\n",
+    "from sklearn.metrics import classification_report\n",
+    "target_names = ['RBF1', 'RBF2']\n",
+    "print(classification_report(y_test, y_pred_test_rbf, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e7cb0555",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[39, 11],\n",
+       "       [16, 28]], dtype=int64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred_test_rbf, labels=[1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "59fd3669",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP_rbf = 36\n",
+    "FN_rbf = 15\n",
+    "FP_rbf = 25 \n",
+    "TN_rbf = 75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7f5f9609",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Poly model train score: 0.978494623655914\n",
+      "Poly model test score: 0.6595744680851063\n"
      ]
     }
    ],
@@ -234,6 +363,239 @@
     "### score\n",
     "print(f'Poly model train score: {accuracy_score(y_train, y_pred_train_poly)}')\n",
     "print(f'Poly model test score: {accuracy_score(y_test, y_pred_test_poly)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dc55c678",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       POLY1       0.72      0.64      0.67        44\n",
+      "       POLY2       0.71      0.78      0.74        50\n",
+      "\n",
+      "    accuracy                           0.71        94\n",
+      "   macro avg       0.71      0.71      0.71        94\n",
+      "weighted avg       0.71      0.71      0.71        94\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Confution Matrix for Linear kernel \n",
+    "from sklearn.metrics import classification_report\n",
+    "target_names = ['POLY1', 'POLY2']\n",
+    "print(classification_report(y_test, y_pred_test_rbf, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "2d19b73f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[33, 17],\n",
+       "       [15, 29]], dtype=int64)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_test, y_pred_test_poly, labels=[1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1b24848f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TP_poly = 32\n",
+    "FN_poly = 18 \n",
+    "FP_poly = 16\n",
+    "TN_poly = 28"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edee337a",
+   "metadata": {},
+   "source": [
+    "### Classification Report and Confustion Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "0f4f3bc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        LNR1       0.91      0.87      0.89        46\n",
+      "        LNR2       0.88      0.91      0.90        47\n",
+      "\n",
+      "    accuracy                           0.89        93\n",
+      "   macro avg       0.89      0.89      0.89        93\n",
+      "weighted avg       0.89      0.89      0.89        93\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Report for Linear kernel (Train)\n",
+    "from sklearn.metrics import classification_report\n",
+    "target_names = ['LNR1', 'LNR2']\n",
+    "print(classification_report(y_train, y_pred_train_linear, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fa453a41",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[43,  4],\n",
+       "       [ 6, 40]], dtype=int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix linear (Train)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_train, y_pred_train_linear, labels=[1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1c6833ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        RBF1       0.93      0.85      0.89        46\n",
+      "        RBF2       0.86      0.94      0.90        47\n",
+      "\n",
+      "    accuracy                           0.89        93\n",
+      "   macro avg       0.90      0.89      0.89        93\n",
+      "weighted avg       0.90      0.89      0.89        93\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Report for RBF kernel (Train)\n",
+    "from sklearn.metrics import classification_report\n",
+    "target_names = ['RBF1', 'RBF2']\n",
+    "print(classification_report(y_train, y_pred_train_rbf, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cfeab8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[44,  3],\n",
+       "       [ 7, 39]], dtype=int64)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix RBF (Train)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_train, y_pred_train_rbf, labels=[1, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c73c9432",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "        PLY1       0.98      0.98      0.98        46\n",
+      "       RPLY2       0.98      0.98      0.98        47\n",
+      "\n",
+      "    accuracy                           0.98        93\n",
+      "   macro avg       0.98      0.98      0.98        93\n",
+      "weighted avg       0.98      0.98      0.98        93\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Classification Report for Poly kernel (Train)\n",
+    "from sklearn.metrics import classification_report\n",
+    "target_names = ['PLY1', 'RPLY2']\n",
+    "print(classification_report(y_train, y_pred_train_poly, target_names=target_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "931c15f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[46,  1],\n",
+       "       [ 1, 45]], dtype=int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confusion Matrix Poly (Train)\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(y_train, y_pred_train_poly, labels=[1, 0])"
    ]
   }
  ],
