--- a/6_model-validation.ipynb
+++ b/6_model-validation.ipynb
@@ -47,12 +47,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = pd.read_csv('https://raw.githubusercontent.com/AufaAnasin/Implement-PSO-SVM-GeneExpression-LungCancer/main/dataset-after-preparation/X_train.csv')\n",
-    "X_test = pd.read_csv('https://raw.githubusercontent.com/AufaAnasin/Implement-PSO-SVM-GeneExpression-LungCancer/main/dataset-after-preparation/X_test.csv')\n",
-    "y_train = pd.read_csv('https://raw.githubusercontent.com/AufaAnasin/Implement-PSO-SVM-GeneExpression-LungCancer/main/dataset-after-preparation/y_train.csv')\n",
-    "y_test = pd.read_csv('https://raw.githubusercontent.com/AufaAnasin/Implement-PSO-SVM-GeneExpression-LungCancer/main/dataset-after-preparation/y_test.csv')\n",
-    "X_valid = pd.read_csv('https://raw.githubusercontent.com/AufaAnasin/Implement-PSO-SVM-GeneExpression-LungCancer/main/dataset-after-preparation/X_valid.csv')\n",
-    "y_valid = pd.read_csv('https://raw.githubusercontent.com/AufaAnasin/Implement-PSO-SVM-GeneExpression-LungCancer/main/dataset-after-preparation/y_valid.csv')"
+    "#Input the dataset\n",
+    "X_train = pd.read_csv('dataset-after-preparation\\X_train.csv')\n",
+    "X_test = pd.read_csv('dataset-after-preparation\\X_test.csv')\n",
+    "y_train = pd.read_csv('dataset-after-preparation\\y_train.csv')\n",
+    "y_test = pd.read_csv('dataset-after-preparation\\y_test.csv')\n",
+    "X_valid = pd.read_csv('dataset-after-preparation\\X_valid.csv')\n",
+    "y_valid = pd.read_csv('dataset-after-preparation\\y_valid.csv')"
    ]
   },
   {
@@ -76,7 +77,7 @@
     {
      "data": {
       "text/plain": [
-       "((93, 1028), (94, 1028))"
+       "((130, 1090), (57, 1090))"
       ]
      },
      "execution_count": 6,
@@ -114,7 +115,7 @@
     {
      "data": {
       "text/plain": [
-       "((93, 485), (93, 494), (93, 492))"
+       "((130, 516), (130, 539), (130, 518))"
       ]
      },
      "execution_count": 8,
@@ -138,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "((94, 485), (94, 494), (94, 492))"
+       "((57, 516), (57, 539), (57, 518))"
       ]
      },
      "execution_count": 9,
@@ -168,8 +169,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear model train score: 0.8924731182795699\n",
-      "Linear model test score: 0.648936170212766\n"
+      "Linear model train score: 0.9846153846153847\n",
+      "Linear model test score: 0.7543859649122807\n"
      ]
     }
    ],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "id": "ac18a806",
    "metadata": {
     "scrolled": true
@@ -195,18 +196,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        LNR1       0.62      0.64      0.63        44\n",
-      "        LNR2       0.67      0.66      0.67        50\n",
+      "        LNR1       0.64      0.82      0.72        22\n",
+      "        LNR2       0.86      0.71      0.78        35\n",
       "\n",
-      "    accuracy                           0.65        94\n",
-      "   macro avg       0.65      0.65      0.65        94\n",
-      "weighted avg       0.65      0.65      0.65        94\n",
+      "    accuracy                           0.75        57\n",
+      "   macro avg       0.75      0.77      0.75        57\n",
+      "weighted avg       0.78      0.75      0.76        57\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Classification Report for Linear kernel (Train set) \n",
+    "# Classification Report for Linear kernel (Ttest set) \n",
     "from sklearn.metrics import classification_report\n",
     "target_names = ['LNR1', 'LNR2']\n",
     "print(classification_report(y_test, y_pred_test_linear, target_names=target_names))"
@@ -221,8 +222,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[33, 17],\n",
-       "       [16, 28]], dtype=int64)"
+       "array([[25, 10],\n",
+       "       [ 4, 18]], dtype=int64)"
       ]
      },
      "execution_count": 12,
@@ -259,8 +260,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear model train score: 0.8924731182795699\n",
-      "Linear model test score: 0.7127659574468085\n"
+      "Linear model train score: 0.9769230769230769\n",
+      "Linear model test score: 0.6666666666666666\n"
      ]
     }
    ],
@@ -286,18 +287,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        RBF1       0.72      0.64      0.67        44\n",
-      "        RBF2       0.71      0.78      0.74        50\n",
+      "        RBF1       0.54      0.86      0.67        22\n",
+      "        RBF2       0.86      0.54      0.67        35\n",
       "\n",
-      "    accuracy                           0.71        94\n",
-      "   macro avg       0.71      0.71      0.71        94\n",
-      "weighted avg       0.71      0.71      0.71        94\n",
+      "    accuracy                           0.67        57\n",
+      "   macro avg       0.70      0.70      0.67        57\n",
+      "weighted avg       0.74      0.67      0.67        57\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Confution Matrix for Linear kernel (Test)\n",
+    "# Confution Matrix for RBF kernel (Test)\n",
     "from sklearn.metrics import classification_report\n",
     "target_names = ['RBF1', 'RBF2']\n",
     "print(classification_report(y_test, y_pred_test_rbf, target_names=target_names))"
@@ -312,8 +313,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[39, 11],\n",
-       "       [16, 28]], dtype=int64)"
+       "array([[19, 16],\n",
+       "       [ 3, 19]], dtype=int64)"
       ]
      },
      "execution_count": 16,
@@ -352,8 +353,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Poly model train score: 0.978494623655914\n",
-      "Poly model test score: 0.6595744680851063\n"
+      "Poly model train score: 0.9923076923076923\n",
+      "Poly model test score: 0.7192982456140351\n"
      ]
     }
    ],
@@ -377,18 +378,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "       POLY1       0.72      0.64      0.67        44\n",
-      "       POLY2       0.71      0.78      0.74        50\n",
+      "       POLY1       0.54      0.86      0.67        22\n",
+      "       POLY2       0.86      0.54      0.67        35\n",
       "\n",
-      "    accuracy                           0.71        94\n",
-      "   macro avg       0.71      0.71      0.71        94\n",
-      "weighted avg       0.71      0.71      0.71        94\n",
+      "    accuracy                           0.67        57\n",
+      "   macro avg       0.70      0.70      0.67        57\n",
+      "weighted avg       0.74      0.67      0.67        57\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Confution Matrix for Linear kernel \n",
+    "# Confution Matrix for Poly kernel \n",
     "from sklearn.metrics import classification_report\n",
     "target_names = ['POLY1', 'POLY2']\n",
     "print(classification_report(y_test, y_pred_test_rbf, target_names=target_names))"
@@ -403,8 +404,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[33, 17],\n",
-       "       [15, 29]], dtype=int64)"
+       "array([[22, 13],\n",
+       "       [ 3, 19]], dtype=int64)"
       ]
      },
      "execution_count": 20,
@@ -451,12 +452,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        LNR1       0.91      0.87      0.89        46\n",
-      "        LNR2       0.88      0.91      0.90        47\n",
+      "        LNR1       0.99      0.99      0.99        68\n",
+      "        LNR2       0.98      0.98      0.98        62\n",
       "\n",
-      "    accuracy                           0.89        93\n",
-      "   macro avg       0.89      0.89      0.89        93\n",
-      "weighted avg       0.89      0.89      0.89        93\n",
+      "    accuracy                           0.98       130\n",
+      "   macro avg       0.98      0.98      0.98       130\n",
+      "weighted avg       0.98      0.98      0.98       130\n",
       "\n"
      ]
     }
@@ -477,8 +478,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[43,  4],\n",
-       "       [ 6, 40]], dtype=int64)"
+       "array([[61,  1],\n",
+       "       [ 1, 67]], dtype=int64)"
       ]
      },
      "execution_count": 23,
@@ -504,12 +505,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        RBF1       0.93      0.85      0.89        46\n",
-      "        RBF2       0.86      0.94      0.90        47\n",
+      "        RBF1       0.97      0.99      0.98        68\n",
+      "        RBF2       0.98      0.97      0.98        62\n",
       "\n",
-      "    accuracy                           0.89        93\n",
-      "   macro avg       0.90      0.89      0.89        93\n",
-      "weighted avg       0.90      0.89      0.89        93\n",
+      "    accuracy                           0.98       130\n",
+      "   macro avg       0.98      0.98      0.98       130\n",
+      "weighted avg       0.98      0.98      0.98       130\n",
       "\n"
      ]
     }
@@ -530,8 +531,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[44,  3],\n",
-       "       [ 7, 39]], dtype=int64)"
+       "array([[60,  2],\n",
+       "       [ 1, 67]], dtype=int64)"
       ]
      },
      "execution_count": 25,
@@ -557,12 +558,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "        PLY1       0.98      0.98      0.98        46\n",
-      "       RPLY2       0.98      0.98      0.98        47\n",
+      "        PLY1       0.99      1.00      0.99        68\n",
+      "       RPLY2       1.00      0.98      0.99        62\n",
       "\n",
-      "    accuracy                           0.98        93\n",
-      "   macro avg       0.98      0.98      0.98        93\n",
-      "weighted avg       0.98      0.98      0.98        93\n",
+      "    accuracy                           0.99       130\n",
+      "   macro avg       0.99      0.99      0.99       130\n",
+      "weighted avg       0.99      0.99      0.99       130\n",
       "\n"
      ]
     }
@@ -583,8 +584,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[46,  1],\n",
-       "       [ 1, 45]], dtype=int64)"
+       "array([[61,  1],\n",
+       "       [ 0, 68]], dtype=int64)"
       ]
      },
      "execution_count": 27,
